dev: Bankist account.

--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
               </li>
               <li class="nav__item">
                 <a class="nav__link nav__link--btn btn--bank" href="bank.html">
-                  <span class="btn--bank">My&nbsp;Bankist</span>
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon-external-window">
-                    <path class="primary"
-                      d="M12 8a1 1 0 0 1-1 1H5v10h10v-6a1 1 0 0 1 2 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V9c0-1.1.9-2 2-2h6a1 1 0 0 1 1 1z" />
-                    <path class="secondary"
-                      d="M19 6.41L8.7 16.71a1 1 0 1 1-1.4-1.42L17.58 5H14a1 1 0 0 1 0-2h6a1 1 0 0 1 1 1v6a1 1 0 0 1-2 0V6.41z" />
-                  </svg>
+                  My&nbsp;Bankist&nbsp;&rightarrow;
                 </a>
               </li>
             </ul>
@@ -292,7 +286,7 @@
         </div>
         </section>
         <section class="section section--sign-up">
-          <div class="container">
+          <div class="container flex-column">
             <div class="section__title">
               <h3 class="section__header">
                 The best day to join Bankist was one year ago. The second best is
@@ -373,9 +367,11 @@
           <button class="btn" type="submit">Create account</button>
           </form>
       </div>
-      <div class="modal__item modal__item--response"></div>
+      <div class="modal__item modal__item--response">
+      </div>
     </div>
     <div class="overlay hidden"></div>
+    <script src="src/js/localStorage.js"></script>
     <script src="src/js/index.js"></script>
     <script src="src/js/slider.js"></script>
     <script src="src/js/modal.js"></script>
