--- a/bank.html
+++ b/bank.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,7 +34,7 @@
         <div>
           <p class="balance__label">Current balance</p>
           <p class="balance__date">
-            As of <span class="date">05/03/2037</span>
+            <span class="date">05/03/2037</span>
           </p>
         </div>
         <p class="balance__value">0000€</p>
